--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -600,7 +600,12 @@ The release of the GAIA catalogue should have a positive impact on both the astr
 
 \begin{acknowledgements}
 
-ARG-J thanks the financial support of CAPES. MA thanks the CNPq (Grants 473002/2013-2 and 308721/2011-0) and FAPERJ (Grant E-26/111.488/2013). RV-M thanks grants: CNPq-306885/2013, Capes/Cofecub-2506/2015, Faperj/PAPDRJ-45/2013. JIBC acknowledges CNPq for a PQ2 fellowship (process number 308489/2013-6). FB-R acknowledges PAPDRJ-FAPERJ/CAPES E-43/2013 number 144997, E-26/101.375/2014. BEM thanks the financial support of CAPES.
+ARG-J thanks the financial support of CAPES.
+MA thanks the CNPq (Grants 473002/2013-2 and 308721/2011-0) and FAPERJ (Grant E-26/111.488/2013).
+RV-M thanks grants: CNPq-306885/2013, Capes/Cofecub-2506/2015, Faperj/PAPDRJ-45/2013.
+JIBC acknowledges CNPq for a PQ2 fellowship (process number 308489/2013-6).
+%FB-R acknowledges PAPDRJ-FAPERJ/CAPES E-43/2013 number 144997, E-26/101.375/2014.
+BEM thanks the financial support of CAPES.
 
 \end{acknowledgements}
 
