--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -72,13 +72,13 @@
           M. Assafin 
           \inst{1} \fnmsep\thanks{Affiliated researcher at Observatoire de Paris/IMCCE, 77 Avenue Denfert Rochereau 75014 Paris, France},
           L. Beauvalet
-          \inst{2},
+          \inst{2,3},
           R. Vieira-Martins
-          \inst{1,2,3} \fnmsep\thanks{Affiliated researcher at Observatoire de Paris/IMCCE, 77 Avenue Denfert Rochereau 75014 Paris, France},
+          \inst{1,2,4} \fnmsep\thanks{Affiliated researcher at Observatoire de Paris/IMCCE, 77 Avenue Denfert Rochereau 75014 Paris, France},
 %          J.-E. Arlot
 %          \inst{4},      
           J. I. B. Camargo
-          \inst{2,3},     
+          \inst{2,4},     
           B. E. Morgado
           \inst{1,2}
 %          F. Braga-Ribas
@@ -110,6 +110,8 @@ CEP 20.080-090 Rio de Janeiro - RJ, Brazil\\
 Observatório Nacional/MCT, R. General José Cristino 77,
 CEP 20921-400 Rio de Janeiro - RJ, Brazil\\
               \email{rvm@on.br}
+              \and
+Observatoire de Paris/SYRTE, 77 Avenue Denfert Rochereau 75014 Paris, France
               \and
 Laboratório Interinstitucional de e-Astronomia - LIneA, Rua Gal. José Cristino 77, Rio de Janeiro, RJ 20921-400, Brazil
 %              \and
@@ -606,6 +608,7 @@ RV-M thanks grants: CNPq-306885/2013, Capes/Cofecub-2506/2015, Faperj/PAPDRJ-45/
 JIBC acknowledges CNPq for a PQ2 fellowship (process number 308489/2013-6).
 %FB-R acknowledges PAPDRJ-FAPERJ/CAPES E-43/2013 number 144997, E-26/101.375/2014.
 BEM thanks the financial support of CAPES.
+The numerical model of the satellites of Jupiter was developped during a post-doctoral contract funded by the Chinese Academy of Sciences (CAS) and supported by the National Scientific Fund of China (NSFC)
 
 \end{acknowledgements}
 
