--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -81,8 +81,8 @@
           \inst{2,4},     
           B. E. Morgado
           \inst{1,2}
-%          F. Braga-Ribas
-%          \inst{2,4}, 
+          F. Braga-Ribas
+          \inst{2,5}, 
 %          D. N. da Silva Neto
 %          \inst{6},
 %          A. H. Andrei
@@ -118,8 +118,8 @@ Laboratório Interinstitucional de e-Astronomia - LIneA, Rua Gal. José Cristino
 %Institut de mécanique céleste et de calcul des éphémérides - Observatoire %de Paris, UMR 8028 du CNRS,
 %77 Av. Denfert-Rochereau, 75014 Paris, France\\
 %              \email{arlot@imcce.fr}
-%              \and
-%Federal University of Technology - Paraná (UTFPR / DAFIS), Rua Sete de Setembro, 3165, CEP 80230-901, Curitiba, PR, Brazil
+              \and
+Federal University of Technology - Paraná (UTFPR / DAFIS), Rua Sete de Setembro, 3165, CEP 80230-901, Curitiba, PR, Brazil
 %              \and
 %Centro Universitário Estadual da Zona Oeste, Av. Manual Caldeira de Alvarenga 1203, CEP 23.070-200 Rio de Janeiro RJ, Brazil
 %              \and
@@ -606,8 +606,8 @@ ARG-J thanks the financial support of CAPES.
 MA thanks the CNPq (Grants 473002/2013-2 and 308721/2011-0) and FAPERJ (Grant E-26/111.488/2013).
 RV-M thanks grants: CNPq-306885/2013, Capes/Cofecub-2506/2015, Faperj/PAPDRJ-45/2013.
 JIBC acknowledges CNPq for a PQ2 fellowship (process number 308489/2013-6).
-%FB-R acknowledges PAPDRJ-FAPERJ/CAPES E-43/2013 number 144997, E-26/101.375/2014.
 BEM thanks the financial support of CAPES.
+FB-R acknowledges PAPDRJ-FAPERJ/CAPES E-43/2013 number 144997, E-26/101.375/2014.
 The numerical model of the satellites of Jupiter was developped during a post-doctoral contract funded by the Chinese Academy of Sciences (CAS) and supported by the National Scientific Fund of China (NSFC)
 
 \end{acknowledgements}
