--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -36,6 +36,20 @@ month={Dec},
 pages={587–588}
 }
 
+@article{Elliot_2000,
+title={The Prediction and Observation of the 1997 July 18 Stellar Occultation by Triton: More Evidence for Distortion and Increasing Pressure in Triton’s Atmosphere},
+volume={148},
+url={http://dx.doi.org/10.1006/icar.2000.6508},
+DOI={10.1006/icar.2000.6508},
+number={2},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Elliot, J and Person, M. J. and McDonald, S. W. and Buie, M. W. and Dunham, E. W. and Millis, R. L. and Nye, R. A. and Olkin, C. B. and Wasserman, L. H. and Young, L.A. and Hubbard, W. B. and Hill, R. and Reitsema, H. J. and Pasachoff, J. M. and McConnochie, T. H. and Babcock, B. A. and Stone, R. C. and Francis, P},
+year={2000},
+month={Dec},
+pages={347–369}
+}
+
 @article{Rettig2001,
 title={Implied Evolutionary Differences of the Jovian Irregular Satellites from a BVR Color Survey},
 volume={154},
@@ -285,6 +299,17 @@ year={2007},
 pages={483–502}
 }
 
+@inbook{Barucci2008,
+author = {Barucci, M Antonietta and Brown, Michael E and Emery, Joshua P},
+editor = {{Barucci}, M.~A. and {Boehnhardt}, H. and {Cruikshank}, D.~P. and 	{Morbidelli}, A. and {Dotson}, R.},
+journal = {The Solar System Beyond Neptune},
+pages = {143--160},
+title = {{Composition and Surface Properties of Transneptunian Objects and Centaurs}},
+booktitle = {The Solar System Beyond Neptune},
+url = {http://adsabs.harvard.edu/abs/2008ssbn.book..143B},
+year = {2008}
+}
+
 @article{Peng2008,
 title={New evidence of precision premium for Galilean satellites from CCD imaging},
 volume={56},
@@ -324,6 +349,20 @@ author={Thomas, P.C.},
 year={2010},
 month={Jul},
 pages={395–401}
+}
+
+@article{Elliot2010,
+title={Size and albedo of Kuiper belt object 55636 from a stellar occultation},
+volume={465},
+url={http://dx.doi.org/10.1038/nature09109},
+DOI={10.1038/nature09109},
+number={7300},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Elliot, J. L. and Person, M. J. and Zuluaga, C. A. and Bosh, A. S. and Adams, E. R. and Brothers, T. C. and Gulbis, A. A. S. and Levine, S. E. and Lockhart, M. and Zangari, A. M. and et al.},
+year={2010},
+month={Jun},
+pages={897–900}
 }
 
 @article{Sicardy2011,
@@ -409,6 +448,20 @@ month={Jan},
 pages={44}
 }
 
+@article{Braga-Ribas2013,
+title={THE SIZE, SHAPE, ALBEDO, DENSITY, AND ATMOSPHERIC LIMIT OF TRANSNEPTUNIAN OBJECT (50000) QUAOAR FROM MULTI-CHORD STELLAR OCCULTATIONS},
+volume={773},
+url={http://dx.doi.org/10.1088/0004-637X/773/1/26},
+DOI={10.1088/0004-637x/773/1/26},
+number={1},
+journal={ApJ},
+publisher={IOP Publishing},
+author={Braga-Ribas, F. and Sicardy, B. and Ortiz, J. L. and Lellouch, E. and Tancredi, G. and Lecacheux, J. and Vieira-Martins, R. and Camargo, J. I. B. and Assafin, M. and Behrend, R. and others},
+year={2013},
+month={Jul},
+pages={26}
+}
+
 @article{Camargo2014,
 title={Candidate stellar occultations by Centaurs and trans-Neptunian objects up to 2014},
 volume={561},
@@ -430,7 +483,7 @@ DOI={10.1038/nature13155},
 number={7494},
 journal={Nature},
 publisher={Nature Publishing Group},
-author={Braga-Ribas, F. and Sicardy, B. and Ortiz, J. L. and Snodgrass, C. and Roques, F. and Vieira-Martins, R. and Camargo, J. I. B. and Assafin, M. and Duffard, R. and Jehin, E. and et al.},
+author={Braga-Ribas, F. and Sicardy, B. and Ortiz, J. L. and Snodgrass, C. and Roques, F. and Vieira-Martins, R. and Camargo, J. I. B. and Assafin, M. and Duffard, R. and Jehin, E. and others},
 year={2014},
 month={Mar},
 pages={72–75}
