--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -530,22 +530,21 @@ Two occultation tests were performed, one by Himalia that occurred on March 3, 2
 
 Figure \ref{Fig: occ-Himalia} shows four zoomed in occultation maps corresponding to each of the four situations for Himalia. The map \ref{Fig: occ-Himalia-STE} is for the situation 1 in the list above. Map \ref{Fig: occ-Himalia-JPL} using JPL ephemeris (situation 2). The map \ref{Fig: occ-Himalia-off22fev} was made from obtained positions on February 22 observed with the Zeiss telescope (diameter = 0.6m; FOV = $12\farcm6$; pixel scale = $0\farcs37 / px$) at the Observatório do Pico dos Dias (OPD, IAU code 874, 45\degr 34\arcmin 57\arcsec W, 22\degr 32\arcmin 04\arcsec S, 1864m). On that day, Himalia and the star were observed in separate FOVs as they were still far apart (situation 3). On the night of the event, March 3, the objects were observed with Perkin-Elmer telescope (diameter = 1.6m; FOV = $5\farcm8$; pixel scale = $0\farcs17 / px$) at OPD just over an hour after the time scheduled for the event. Satellite and star were separated by about 16 arcsec, so very close to each other (situation 4). From the calculated offsets, the map \ref{Fig: occ-Himalia-off03mar} was generated. Notice that the shadow path was not predicted to cross the OPD (green point at the bottom of the maps). This was not necessary for testing the prediction.
 
-\begin{figure*}
-\begin{centering}
-\subfigure[Prediction with STE ephemeris]{\includegraphics[width=8.8cm]{figures/Himalia_STE.eps}  \label{Fig: occ-Himalia-STE}}
-\subfigure[Prediction with JPL ephemeris]{\includegraphics[width=8.8cm]{figures/Himalia_JPL.eps}  \label{Fig: occ-Himalia-JPL}}
-\subfigure[Observation at February 22 (different FOVs)]{\includegraphics[width=8.8cm]{figures/Himalia_22fev.eps}   \label{Fig: occ-Himalia-off22fev}}
-\subfigure[Observation at March 03 (same FOV)]{\includegraphics[width=8.8cm]{figures/Himalia_03mar.eps}   \label{Fig: occ-Himalia-off03mar}}
-\caption{Predictions for Himalia: The straight lines show the size of the shadow. The big red dot show the geocentric closest approach of the shadow. The black "+" marks at maps (b,c,d) are the STE prediction closest approach for reference. The small red ones are the center of the shadow separated by one minute. \ref{Fig: occ-Himalia-STE} is the map using the STE ephemeris showed in Sec. \ref{Sec: integration}. \ref{Fig: occ-Himalia-JPL} shows the shadow using the JPL ephemeris. In \ref{Fig: occ-Himalia-off22fev} we apply offsets to the positions of star and satellite accordingly the observations made at February 22. \ref{Fig: occ-Himalia-off03mar} is as in \ref{Fig: occ-Himalia-off22fev} but with observations made at March 03 when the objects were close to each other. The green dot at the bottom of the maps is the location of Observatório do Pico dos Dias.}
-\label{Fig: occ-Himalia}
-\end{centering}
-\end{figure*}
+%\begin{figure*}
+%\begin{centering}
+%\subfigure[Prediction with STE ephemeris]{\includegraphics[width=8.8cm]{figures/Himalia_STE.eps}  \label{Fig: occ-Himalia-STE}}
+%\subfigure[Prediction with JPL ephemeris]{\includegraphics[width=8.8cm]{figures/Himalia_JPL.eps}  \label{Fig: occ-Himalia-JPL}}
+%\subfigure[Observation at February 22 (different FOVs)]{\includegraphics[width=8.8cm]{figures/Himalia_22fev.eps}   \label{Fig: occ-Himalia-off22fev}}
+%\subfigure[Observation at March 03 (same FOV)]{\includegraphics[width=8.8cm]{figures/Himalia_03mar.eps}   \label{Fig: occ-Himalia-off03mar}}
+%\caption{Predictions for Himalia: The straight lines show the size of the shadow. The big red dot show the geocentric closest approach of the shadow. The black "+" marks at maps (b,c,d) are the STE prediction closest approach for reference. The small red ones are the center of the shadow separated by one minute. \ref{Fig: occ-Himalia-STE} is the map using the STE ephemeris showed in Sec. \ref{Sec: integration}. \ref{Fig: occ-Himalia-JPL} shows the shadow using the JPL ephemeris. In \ref{Fig: occ-Himalia-off22fev} we apply offsets to the positions of star and satellite accordingly the observations made at February 22. \ref{Fig: occ-Himalia-off03mar} is as in \ref{Fig: occ-Himalia-off22fev} but with observations made at March 03 when the objects were close to each other. The green dot at the bottom of the maps is the location of Observatório do Pico dos Dias.}
+%\label{Fig: occ-Himalia}
+%\end{centering}
+%\end{figure*}
 
 \begin{figure*}
 \begin{centering}
 \includegraphics[width=17.6cm]{figures/HIMALIA.eps}
-\caption{TESTE DE MAPA. STE = AZUL, JPL=VERMELHO, 22FEV=PRETO, 03MAR=VERDE%Predictions for Himalia: The straight lines show the size of the shadow. The big red dot show the geocentric closest approach of the shadow. The black "+" marks at maps (b,c,d) are the STE prediction closest approach for reference. The small red ones are the center of the shadow separated by one minute. \ref{Fig: occ-Himalia-STE} is the map using the STE ephemeris showed in Sec. \ref{Sec: integration}. \ref{Fig: occ-Himalia-JPL} shows the shadow using the JPL ephemeris. In \ref{Fig: occ-Himalia-off22fev} we apply offsets to the positions of star and satellite accordingly the observations made at February 22. \ref{Fig: occ-Himalia-off03mar} is as in \ref{Fig: occ-Himalia-off22fev} but with observations made at March 03 when the objects were close to each other. The green dot at the bottom of the maps is the location of Observatório do Pico dos Dias.
-}
+\caption{Predictions for Himalia: The straight lines show the center of the shadow over time. In blue is for the prediction using the STE ephemeris showed in Sec. \ref{Sec: integration}. In red the shadow using the JPL ephemeris. In black we apply offsets to the positions of star and satellite accordingly the observations made at February 22. In green, the same for the previous one but with observations made at March 03 when the objects were close to each other. The dots show the closest approach of the shadow for each prediction.}
 \label{Fig: occ-Himalia}
 \end{centering}
 \end{figure*}
@@ -555,15 +554,15 @@ In this event, it is possible to see that the shade does not vary by much among 
 \begin{table}
 \caption{\label{Tab: comparison-Himalia} Comparison between the predictions of the Himalia occultation at March 03, 2015.}
 \begin{centering}
-\begin{tabular}{lccc}
+\begin{tabular}{lcc}
 \hline  \hline
-\multicolumn{4}{c}{Difference from STE prediction} \tabularnewline
-Method  & Instant of C/A  & C/A & Map   \tabularnewline
+\multicolumn{3}{c}{Difference from STE prediction} \tabularnewline
+Method  & Instant of C/A  & C/A   \tabularnewline
 \hline
-STE & 00:39:51 UTC & $0\farcs703$ & \ref{Fig: occ-Himalia-STE} \tabularnewline
-JPL & -26s & +11mas (36km) & \ref{Fig: occ-Himalia-JPL} \tabularnewline % (284km)
-Feb. 22 Obs. & -14s & -20mas (65km) & \ref{Fig: occ-Himalia-off22fev} \tabularnewline % (153km)
-Mar. 03 Obs. & -36s & -09mas (29km) & \ref{Fig: occ-Himalia-off03mar} \tabularnewline % (393km)
+STE & 00:39:51 UTC & $0\farcs703$ \tabularnewline
+JPL & -26s & +11mas (36km) \tabularnewline % (284km)
+Feb. 22 Obs. & -14s & -20mas (65km) \tabularnewline % (153km)
+Mar. 03 Obs. & -36s & -09mas (29km) \tabularnewline % (393km)
 \hline
 \end{tabular}
 \par\end{centering}
