--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -528,7 +528,7 @@ Two occultation tests were performed, one by Himalia that occurred on March 3, 2
 \item Same as 3 but with the star and the satellite close in the same FOV.
 \end{enumerate}
 
-Figure \ref{Fig: occ-Himalia} shows four zoomed in occultation maps corresponding to each of the four situations for Himalia. The map \ref{Fig: occ-Himalia-STE} is for the situation 1 in the list above. Map \ref{Fig: occ-Himalia-JPL} using JPL ephemeris (situation 2). The map \ref{Fig: occ-Himalia-off22fev} was made from obtained positions on February 22 observed with the Zeiss telescope (diameter = 0.6m; FOV = $12\farcm6$; pixel scale = $0\farcs37 / px$) at the Observatório do Pico dos Dias (OPD, IAU code 874, 45\degr 34\arcmin 57\arcsec W, 22\degr 32\arcmin 04\arcsec S, 1864m). On that day, Himalia and the star were observed in separate FOVs as they were still far apart (situation 3). On the night of the event, March 3, the objects were observed with Perkin-Elmer telescope (diameter = 1.6m; FOV = $5\farcm8$; pixel scale = $0\farcs17 / px$) at OPD just over an hour after the time scheduled for the event. Satellite and star were separated by about 16 arcsec, so very close to each other (situation 4). From the calculated offsets, the map \ref{Fig: occ-Himalia-off03mar} was generated. Notice that the shadow path was not predicted to cross the OPD (green point at the bottom of the maps). This was not necessary for testing the prediction.
+Figure \ref{Fig: occ-Himalia} shows a zoomed in occultation map with the four situations for Himalia. The line in blue is center of the shadow for the situation 1 in the list above. The line in red using JPL ephemeris (situation 2). The line in black was made from obtained positions on February 22 observed with the Zeiss telescope (diameter = 0.6m; FOV = $12\farcm6$; pixel scale = $0\farcs37 / px$) at the Observatório do Pico dos Dias (OPD, IAU code 874, 45\degr 34\arcmin 57\arcsec W, 22\degr 32\arcmin 04\arcsec S, 1864m). On that day, Himalia and the star were observed in separate FOVs as they were still far apart (situation 3). On the night of the event, March 3, the objects were observed with Perkin-Elmer telescope (diameter = 1.6m; FOV = $5\farcm8$; pixel scale = $0\farcs17 / px$) at OPD just over an hour after the time scheduled for the event. Satellite and star were separated by about 16 arcsec, so very close to each other (situation 4). From the calculated offsets, the center of the shadow was obtained. Notice that the shadow path was not predicted to cross the OPD (which was located at almost 2000 km from the shadow path). This was not necessary for testing the prediction.
 
 %\begin{figure*}
 %\begin{centering}
@@ -544,12 +544,12 @@ Figure \ref{Fig: occ-Himalia} shows four zoomed in occultation maps correspondin
 \begin{figure*}
 \begin{centering}
 \includegraphics[width=17.6cm]{figures/HIMALIA.eps}
-\caption{Predictions for Himalia: The straight lines show the center of the shadow over time. In blue is for the prediction using the STE ephemeris showed in Sec. \ref{Sec: integration}. In red the shadow using the JPL ephemeris. In black we apply offsets to the positions of star and satellite accordingly the observations made at February 22. In green, the same for the previous one but with observations made at March 03 when the objects were close to each other. The dots show the closest approach of the shadow for each prediction.}
+\caption{Predictions for Himalia: The straight lines show the center of the shadow over time. In blue is for the prediction using the STE ephemeris showed in Sec. \ref{Sec: integration}. In red the shadow using the JPL ephemeris. In black we apply offsets to the positions of star and satellite accordingly the observations made at February 22. In green, the same for the previous one but with observations made at March 03 when the objects were close to each other. The dots show the closest approach of the shadow for each prediction. The scales are relative to the closest approach of the prediction using the STE ephemeris. The bars show the estimated diameter of the satellite and estimated error of the prediction.}
 \label{Fig: occ-Himalia}
 \end{centering}
 \end{figure*}
 
-In this event, it is possible to see that the shade does not vary by much among the four maps suggesting that there was a good probability of observing the event. In fact, the largest differences between the shadows of the four maps were 36s, which correspond to 120 mas, in time along the shadow path and 101km (31 mas) in the direction perpendicular to the shadows (see table \ref{Tab: comparison-Himalia}).
+In this event, it is possible to see that the shade does not vary by much among the four predictions being smaller than the estimated diameter of the satellite and error. This suggests that there was a good probability of observing the event. In fact, the largest differences between the shadows of the four situations were 36s, in time along the shadow path and 101km (31 mas) in the direction perpendicular to the shadows (see table \ref{Tab: comparison-Himalia}).
 
 \begin{table}
 \caption{\label{Tab: comparison-Himalia} Comparison between the predictions of the Himalia occultation at March 03, 2015.}
