--- a/Irregular-occ/references.bib
+++ b/Irregular-occ/references.bib
@@ -190,18 +190,19 @@ month={May},
 pages={459–461}
 }
 
-@InProceedings{Sheppard2005,
-title={Outer irregular satellites of the planets and their relationship with asteroids, comets and Kuiper Belt objects},
-volume={1},
-url={http://dx.doi.org/10.1017/S1743921305006824},
-DOI={10.1017/s1743921305006824},
-number={S229},
-journal={Proceedings of the International Astronomical Union},
-publisher={Cambridge University Press (CUP)},
-author={Sheppard, Scott S.},
-year={2005},
-month={Aug},
-pages={319}
+@inproceedings{Sheppard2005,
+author = {Sheppard,Scott S.},
+title = {Outer irregular satellites of the planets and their relationship with asteroids, comets and Kuiper Belt objects},
+booktitle = {Asteroids, Comets, Meteors},
+series = {Proceedings of the International Astronomical Union},
+volume = {1},
+issue = {Symposium S229},
+month = {8},
+year = {2005},
+pages = {319-334},
+numpages = {16},
+doi = {10.1017/S1743921305006824},
+URL = {http://journals.cambridge.org/article_S1743921305006824},
 }
 
 @article{Clark2005,
